--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ajv": "^8.16.0",
+    "axios": "^1.7.2",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-rnd": "^10.4.11",
+    "react-router-dom": "^6.24.0"
   }
 }
