--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +40,7 @@
     "ajv": "^8.16.0",
     "axios": "^1.7.2",
     "react-beautiful-dnd": "^13.1.1",
+    "react-icons": "^5.2.1",
     "react-rnd": "^10.4.11",
     "react-router-dom": "^6.24.0"
   }
